[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "imut"
version = "0.0.0"
authors = [
    {name = "Johan Tjuatja", email = "hanstjua@yahoo.co.id"},
]
description = "Efficient immutable collections."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/hanstjua/imut"
"Bug Tracker" = "https://github.com/hanstjua/imut/issues"

[tool.setuptools]
packages = ["imut"]